# c_cpp_project_template

./: .clang-format  .gitignore  .gitmodules  BidiRefTest.txt  CMakeLists.txt  Kbuild.in  README.md  arm_linux_setup.cmake
.github/workflows/: cmake.yml
script/: build.sh  memleak-check.sh
spike/: CMakeLists.txt  example.c  getopt-example.c  glib-dbus-client.c  glib-dbus-server.c
spike/include/: dbus_define.h
spike/shared/: test_dbus_define.h
spike/shared/dbus/: dbus-error.c  dbus-error.h  dbus-inner-def.h  dbus-task.c  dbus-task.h  dbus_define.h  dbus_epoll.c  dbus_epoll.h  dbus_error.c  dbus_error.h  dbus_helper.h  dbus_object.c  dbus_object.h  dbus_object_helper.c  dbus_object_helper.h  dbus_root_object.c  dbus_root_object.h  dbus_shared_def.h  dbus_task.c  dbus_task.h  dbus_timer.c  dbus_timer.h
spike/shared/dbus/initial/: dbus_dispatch.c  dbus_initial.c  dbus_initial.h  dbus_timer.c  dbus_watch.c
spike/shared/dbus/interface/: dbus-interface-home.c  dbus-interface-home.h  dbus-interface-inner.c  dbus-interface-inner.h  dbus-interface.c  dbus-interface.h
spike/shared/dbus/interface/introspectable/: introspectable.c  introspectable.h
spike/shared/dbus/interface/object-manager/: object-manager.c  object-manager.h
spike/shared/dbus/interface/object_manager/: object_manager.c  object_manager.h
spike/shared/dbus/interface/properties/: properties.c  properties.h
spike/shared/dbus/object/: dbus-object.c  dbus-object.h  dbus_object.c  dbus_object.h  dbus_object_helper.c  dbus_object_helper.h
spike/shared/dbus/object/root-object/: root-object.c  root-object.h
spike/shared/lib/: glike-list.c  glike-list.h  io-flush.c  io-flush.h  list-define.h  list-operation.h  set-list.c  set-list.h  string-buffer.c  string-buffer.h  task.h  timer-task.c  timer-task.h  typedef.h
spike/src/: alsa-play.c  dbus-client.c  dbus-epoll.c  dbus-server.c  defer.cpp  example-timer.c  glib-dbus-client2.c  glib-dbus-server2.c  instance.cpp  io-flush-main.c  sdl_triangle.cpp  thread_mem_attack.c
spike/src/dbus-example/object/: object-countdown.c
spike/src/dbus-object-example/object/: object-countdown.c  object-countdown.h
src/: CMakeLists.txt  bidiref.c  bidiref1.c  bidirefp.h  brrule.c  brtable.c  brutils.c
src/demo/: bidirefdemo.c
src/example/: example.cpp  example.h
src/include/: bidiref.h
src/lib/: lib.cpp
test/: CMakeLists.txt  test-entry.cpp  test-entry.h
test/example/: simple-example.cpp
tools/arm/: arm.toolchain.cmake
tools/linux_pc/: FindDBusGLIB.cmake  FindGObject.cmake  x86.toolchain.cmake
tools/mac/: x86_64.toolchain.cmake
tools/windows/: windows.toolchain.cmake
